hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__resolve_ref_to_parameter_nested.snap
---
source: hir/src/passes/resolver.rs
expression: hir
---
Hir {
    identifiers: [
        IdentId(0) => "x",
        IdentId(1) => "n",
        IdentId(2) => "number",
        IdentId(3) => "add",
        IdentId(4) => "boolean",
        IdentId(5) => "div",
        IdentId(6) => "eq",
        IdentId(7) => "ge",
        IdentId(8) => "gt",
        IdentId(9) => "le",
        IdentId(10) => "lt",
        IdentId(11) => "mul",
        IdentId(12) => "neg",
        IdentId(13) => "neq",
        IdentId(14) => "print",
        IdentId(15) => "string",
        IdentId(16) => "sub",
        IdentId(17) => "void",
    ],
    identifier_refs: [
        IdentRefId(0) => IdentifierRef {
            id: IdentRefId(0),
            ident: Identifier {
                id: IdentId(2),
                span: 1:10; [9, 15],
                bound: Bound(3),
            },
        },
        IdentRefId(1) => IdentifierRef {
            id: IdentRefId(1),
            ident: Identifier {
                id: IdentId(2),
                span: 1:19; [18, 24],
                bound: Bound(3),
            },
        },
        IdentRefId(2) => IdentifierRef {
            id: IdentRefId(2),
            ident: Identifier {
                id: IdentId(1),
                span: 1:47; [46, 47],
                bound: Bound(22),
            },
        },
    ],
    expressions: [
        ExprId(0) => Expression {
            id: ExprId(0),
            kind: Literal(
                Literal {
                    kind: Boolean(true),
                    span: 1:36; [35, 39],
                },
            ),
            span: 1:36; [35, 39],
            typed: Typed(3),
        },
        ExprId(1) => Expression {
            id: ExprId(1),
            kind: Literal(
                Literal {
                    kind: IdentRefId(2),
                    span: 1:47; [46, 47],
                },
            ),
            span: 1:47; [46, 47],
            typed: Typed(4),
        },
        ExprId(2) => Expression {
            id: ExprId(2),
            kind: Block(
                [
                    StmtId(0),
                ],
            ),
            span: 1:41; [40, 50],
            typed: Typed(2),
        },
        ExprId(3) => Expression {
            id: ExprId(3),
            kind: While(
                ExprId(0),
                ExprId(2),
            ),
            span: 1:30; [29, 50],
            typed: Typed(2),
        },
        ExprId(4) => Expression {
            id: ExprId(4),
            kind: Block(
                [
                    StmtId(1),
                ],
            ),
            span: 1:28; [27, 52],
            typed: Typed(2),
        },
    ],
    statements: [
        StmtId(0) => Statement {
            id: StmtId(0),
            kind: Ret(
                Some(
                    ExprId(1),
                ),
                Explicit,
            ),
            span: 1:43; [42, 48],
        },
        StmtId(1) => Statement {
            id: StmtId(1),
            kind: Expression(
                ExprId(3),
            ),
            span: 1:30; [29, 50],
        },
        StmtId(2) => Statement {
            id: StmtId(2),
            kind: LetFn(
                Identifier {
                    id: IdentId(0),
                    span: 1:5; [4, 5],
                    bound: Bound(21),
                },
                [
                    Parameter {
                        identifier: Identifier {
                            id: IdentId(1),
                            span: 1:7; [6, 7],
                            bound: Bound(22),
                        },
                        type_def_id: TypeDefId(0),
                        span: 1:7; [6, 15],
                        typed: Typed(4),
                    },
                ],
                Return {
                    type_def_id: Some(
                        TypeDefId(1),
                    ),
                    typed: Typed(4),
                },
                ExprId(4),
            ),
            span: 1:1; [0, 52],
        },
    ],
    type_defs: [
        TypeDefId(0) => TypeDef {
            kind: Simple(
                IdentRefId(0),
            ),
            span: 1:10; [9, 15],
        },
        TypeDefId(1) => TypeDef {
            kind: Simple(
                IdentRefId(1),
            ),
            span: 1:19; [18, 24],
        },
    ],
    roots: [
        StmtId(2),
    ],
    symbols: [
        SymbolId(0) => Symbol {
            id: SymbolId(0),
            kind: NotFound,
            type_id: TypeId(0),
        },
        SymbolId(1) => Symbol {
            id: SymbolId(1),
            kind: NativeType(
                IdentId(17),
                Void,
            ),
            type_id: TypeId(2),
        },
        SymbolId(2) => Symbol {
            id: SymbolId(2),
            kind: NativeType(
                IdentId(15),
                String,
            ),
            type_id: TypeId(2),
        },
        SymbolId(3) => Symbol {
            id: SymbolId(3),
            kind: NativeType(
                IdentId(2),
                Number,
            ),
            type_id: TypeId(2),
        },
        SymbolId(4) => Symbol {
            id: SymbolId(4),
            kind: NativeType(
                IdentId(4),
                Boolean,
            ),
            type_id: TypeId(2),
        },
        SymbolId(5) => Symbol {
            id: SymbolId(5),
            kind: Native(
                IdentId(16),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                SubNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(6) => Symbol {
            id: SymbolId(6),
            kind: Native(
                IdentId(14),
                [
                    TypeId(5),
                ],
                TypeId(1),
                PrintString,
            ),
            type_id: TypeId(7),
        },
        SymbolId(7) => Symbol {
            id: SymbolId(7),
            kind: Native(
                IdentId(14),
                [
                    TypeId(4),
                ],
                TypeId(1),
                PrintNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(8) => Symbol {
            id: SymbolId(8),
            kind: Native(
                IdentId(14),
                [
                    TypeId(3),
                ],
                TypeId(1),
                PrintBoolean,
            ),
            type_id: TypeId(9),
        },
        SymbolId(9) => Symbol {
            id: SymbolId(9),
            kind: Native(
                IdentId(13),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                NeqNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(10) => Symbol {
            id: SymbolId(10),
            kind: Native(
                IdentId(13),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                NeqBooleanBoolean,
            ),
            type_id: TypeId(11),
        },
        SymbolId(11) => Symbol {
            id: SymbolId(11),
            kind: Native(
                IdentId(12),
                [
                    TypeId(4),
                ],
                TypeId(4),
                NegNumber,
            ),
            type_id: TypeId(12),
        },
        SymbolId(12) => Symbol {
            id: SymbolId(12),
            kind: Native(
                IdentId(11),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                MulNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(13) => Symbol {
            id: SymbolId(13),
            kind: Native(
                IdentId(10),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LtNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(14) => Symbol {
            id: SymbolId(14),
            kind: Native(
                IdentId(9),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LeNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(15) => Symbol {
            id: SymbolId(15),
            kind: Native(
                IdentId(8),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GtNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(16) => Symbol {
            id: SymbolId(16),
            kind: Native(
                IdentId(7),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GeNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(17) => Symbol {
            id: SymbolId(17),
            kind: Native(
                IdentId(6),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                EqNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(18) => Symbol {
            id: SymbolId(18),
            kind: Native(
                IdentId(6),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                EqBooleanBoolean,
            ),
            type_id: TypeId(11),
        },
        SymbolId(19) => Symbol {
            id: SymbolId(19),
            kind: Native(
                IdentId(5),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                DivNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(20) => Symbol {
            id: SymbolId(20),
            kind: Native(
                IdentId(3),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                AddNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(21) => Symbol {
            id: SymbolId(21),
            kind: LetFn(
                IdentId(0),
                StmtId(2),
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            type_id: TypeId(12),
        },
        SymbolId(22) => Symbol {
            id: SymbolId(22),
            kind: Parameter(
                IdentId(1),
                StmtId(2),
                0,
            ),
            type_id: TypeId(4),
        },
    ],
    types: [
        TypeId(0) => Invalid,
        TypeId(1) => Void,
        TypeId(2) => None,
        TypeId(3) => Boolean,
        TypeId(4) => Number,
        TypeId(5) => String,
        TypeId(6) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(4),
        ),
        TypeId(7) => Function(
            [
                TypeId(5),
            ],
            TypeId(1),
        ),
        TypeId(8) => Function(
            [
                TypeId(4),
            ],
            TypeId(1),
        ),
        TypeId(9) => Function(
            [
                TypeId(3),
            ],
            TypeId(1),
        ),
        TypeId(10) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(3),
        ),
        TypeId(11) => Function(
            [
                TypeId(3),
                TypeId(3),
            ],
            TypeId(3),
        ),
        TypeId(12) => Function(
            [
                TypeId(4),
            ],
            TypeId(4),
        ),
    ],
    exit_points: ExitPoints {
        exit_points: {
            ExprId(4): [
                Explicit(
                    Some(
                        ExprId(1),
                    ),
                ),
            ],
        },
        unreachable: [],
    },
}
